fix(textfield): increase z-index of icon, prefix, and suffix
Bumped the z-index of the icon, prefix, and suffix text by 1 to
ensure they appear above overlapping elements.

--- a/src/components/textfield/_textfield.scss
+++ b/src/components/textfield/_textfield.scss
@@ -89,6 +89,13 @@
     white-space: nowrap;
   }
 
+  &__leading-icon,
+  &__prefix-text,
+  &__suffix-text,
+  &__trailing-icon {
+    z-index: 1;
+  }
+
   input:required ~ &__filled &__floating-label::after,
   input:required ~ &__outlined &__floating-label::after {
     content: '*';
